 - [ZBXNEXT-918] redesign Administration->Media types (Eduard)
 - [ZBXNEXT-915] redesign Administration->Authentication (Eduard)
 - [ZBXNEXT-966] update jQuery to 1.6.4 (Eduard)
 - [ZBX-1357] updated Brazilian Portuguese, Dutch, German, Japanese, Polish, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
 - [ZBX-3881] fixed delay being set to 0 when changing item type from trapper to agent in item update form (Vedmak)
 - [ZBX-1020] added support for --sysconfdir, changed default installation directories (dimir)
 - [ZBX-3912] fixed popup object selection for IE (Eduard)
 - [ZBX-4132] fixed checkbox cookie work (Eduard)
 - [ZBX-3635] fixed situation when templated trigger can reference items from another template not linked to a host (Vedmak)
 - [ZBX-4107] fixed map element configuration form layout (Vedmak)
 - [ZBX-4219] replaced {HOSTNAME} by {HOST.NAME} in data.sql (Alexei)
 - [ZBX-3540] removed unused node properties: timezone, history keeping, trend keeping (Alexei)
 - [ZBX-3275] fixed deleting of master node, it shouldn't delete other nodes (Alexei)
 - [ZBX-4209] fixed warning in latest data when navigating from monitoring->hosts page (Alexei)
 - [ZBX-4208] fixed Brazilian Portuguese being reported as just Portuguese in locale code (Richlv)
 - [ZBX-4151] fixed timer crash due to heap memory corruption (asaveljevs)
 - [ZBX-3755] fixed latest values in cloned items (Sasha)
 - [ZBX-3165] fixed layout of item prototypes form (Vedmak)
 - [ZBX-3342] fixed translation of graphs "Generated in x sec" stamps (Vedmak)
 - [ZBX-3926] fixed "Hide/Show selected" filter in history of log items (Vedmak)
 - [ZBX-4119] fixed items like simple check require agent interface on host, now any interface is enough (asaveljevs, Vedmak)
 - [ZBX-3745] fixed error message when link template with discovery rule to host that does not have needed interface (Vedmak)