@@ -26,8 +26,8 @@
  * @param int $logtype
  * @return string
  */
-function get_item_logtype_description($logtype){
-	switch($logtype){
+function get_item_logtype_description($logtype) {
+	switch ($logtype) {
 		case ITEM_LOGTYPE_INFORMATION:
 			return S_INFORMATION;
 		case ITEM_LOGTYPE_WARNING:
@@ -49,8 +49,8 @@ function get_item_logtype_description($logtype){
  * @param int $logtype
  * @return string
  */
-function get_item_logtype_style($logtype){
-	switch($logtype){
+function get_item_logtype_style($logtype) {
+	switch ($logtype) {
 		case ITEM_LOGTYPE_INFORMATION:
 			return 'information';
 		case ITEM_LOGTYPE_WARNING:
@@ -158,15 +158,16 @@ function item_type2str($type = null){
 			return S_UNKNOWN;
 	}
 
-	function item_status2style($status){
-		switch($status){
-			case ITEM_STATUS_ACTIVE:	$status = 'off';	break;
-			case ITEM_STATUS_DISABLED:	$status = 'on';		break;
+	function item_status2style($status) {
+		switch ($status) {
+			case ITEM_STATUS_ACTIVE:
+				return 'off';
+			case ITEM_STATUS_DISABLED:
+				return 'on';
 			case ITEM_STATUS_NOTSUPPORTED:
 			default:
-				$status = 'unknown';	break;
+				return 'unknown';
 		}
-	return $status;
 	}
 
 	function update_item_in_group($groupid,$itemid,$item){
@@ -183,29 +184,6 @@ function item_type2str($type = null){
 			API::Item()->update($row['itemid'],$item);
 		}
 	return true;
-	}
-
-	function getInterfaceTypeByItem($type) {
-		switch ($type) {
-			case ITEM_TYPE_SNMPV1:
-			case ITEM_TYPE_SNMPV2C:
-			case ITEM_TYPE_SNMPV3:
-			case ITEM_TYPE_SNMPTRAP:
-				return INTERFACE_TYPE_SNMP;
-			case ITEM_TYPE_IPMI:
-				return INTERFACE_TYPE_IPMI;
-			case ITEM_TYPE_JMX:
-				return INTERFACE_TYPE_JMX;
-			case ITEM_TYPE_ZABBIX:
-			case ITEM_TYPE_SIMPLE:
-			case ITEM_TYPE_EXTERNAL:
-			case ITEM_TYPE_DB_MONITOR:
-			case ITEM_TYPE_SSH:
-			case ITEM_TYPE_TELNET:
-				return INTERFACE_TYPE_AGENT;
-		}
-
-		return INTERFACE_TYPE_UNKNOWN;
 	}
 
 // Delete Item definition from selected group
@@ -319,17 +297,31 @@ function item_type2str($type = null){
 		$dstHosts = API::Host()->get($options);
 
 		foreach ($dstHosts as $dstHost) {
+			$interfaceids = array();
+			foreach ($dstHost['interfaces'] as $interface) {
+				if ($interface['main'] == 1) {
+					$interfaceids[$interface['type']] = $interface['interfaceid'];
+				}
+			}
+
 			foreach ($srcItems as &$srcItem) {
-				if ($dstHost['status'] != HOST_STATUS_TEMPLATE && INTERFACE_TYPE_UNKNOWN != ($type = getInterfaceTypeByItem($srcItem['type']))) {
-					foreach ($dstHost['interfaces'] as $interface) {
-						if ($interface['type'] == $type && $interface['main'] == 1) {
-							$srcItem['interfaceid'] = $interface['interfaceid'];
+				if ($dstHost['status'] != HOST_STATUS_TEMPLATE) {
+					$type = CItem::itemTypeInterface($srcItem['type']);
+
+					if ($type == INTERFACE_TYPE_ANY) {
+						foreach (array(INTERFACE_TYPE_AGENT, INTERFACE_TYPE_SNMP, INTERFACE_TYPE_JMX, INTERFACE_TYPE_IPMI) as $itype) {
+							if (isset($interfaceids[$itype])) {
+								$srcItem['interfaceid'] = $interfaceids[$itype];
+								break;
+							}
 						}
 					}
-
-					if (!isset($srcItem['interfaceid'])) {
-						error(_s('Cannot find host interface on host "%1$s" for item key "%2$s".', $dstHost['host'], $srcItem['key_']));
-						return false;
+					elseif ($type !== false) {
+						if (!isset($interfaceids[$type])) {
+							error(_s('Cannot find host interface on host "%1$s" for item key "%2$s".', $dstHost['host'], $srcItem['key_']));
+							return false;
+						}
+						$srcItem['interfaceid'] = $interfaceids[$type];
 					}
 				}
 
@@ -373,17 +365,31 @@ function item_type2str($type = null){
 		$dstHosts = API::Host()->get($options);
 		$dstHost = reset($dstHosts);
 
+		$interfaceids = array();
+		foreach ($dstHost['interfaces'] as $interface) {
+			if ($interface['main'] == 1) {
+				$interfaceids[$interface['type']] = $interface['interfaceid'];
+			}
+		}
+
 		foreach ($srcItems as &$srcItem) {
-			if ($dstHost['status'] != HOST_STATUS_TEMPLATE && INTERFACE_TYPE_UNKNOWN != ($type = getInterfaceTypeByItem($srcItem['type']))) {
-				foreach ($dstHost['interfaces'] as $interface) {
-					if ($interface['type'] == $type && $interface['main'] == 1) {
-						$srcItem['interfaceid'] = $interface['interfaceid'];
+			if ($dstHost['status'] != HOST_STATUS_TEMPLATE) {
+				$type = CItem::itemTypeInterface($srcItem['type']);
+
+				if ($type == INTERFACE_TYPE_ANY) {
+					foreach (array(INTERFACE_TYPE_AGENT, INTERFACE_TYPE_SNMP, INTERFACE_TYPE_JMX, INTERFACE_TYPE_IPMI) as $itype) {
+						if (isset($interfaceids[$itype])) {
+							$srcItem['interfaceid'] = $interfaceids[$itype];
+							break;
+						}
 					}
 				}
-
-				if (!isset($srcItem['interfaceid'])) {
-					error(_s('Cannot find host interface on host "%1$s" for item key "%2$s".', $dstHost['host'], $srcItem['key_']));
-					return false;
+				elseif ($type !== false) {
+					if (!isset($interfaceids[$type])) {
+						error(_s('Cannot find host interface on host "%1$s" for item key "%2$s".', $dstHost['host'], $srcItem['key_']));
+						return false;
+					}
+					$srcItem['interfaceid'] = $interfaceids[$type];
 				}
 			}
 
